.env file with admin

--- a/.env
+++ b/.env
@@ -4,13 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://tiga85:tiga85@localhost:3000/data?schema=public"
+DATABASE_URL="postgresql://postgres:Tiga85@localhost:5432/api?schema=public"
 
-
-AUTH_SECRET_KEY=tiga85
-SENTRY_DSN= tiga85
-
-
-
-
-
+AUTH_SECRET_KEY=Tiga85
+SENTRY_DSN=tiga85
