--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.19.1",
-    "@sentry/node": "^7.64.0",
+    "@sentry/node": "^7.119.0",
+    "@sentry/profiling-node": "^8.28.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
