--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "@sentry/nextjs": "^8.29.0",
     "@sentry/node": "^7.119.0",
     "@sentry/profiling-node": "^8.28.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "next": "^14.2.8",
     "uuid": "^9.0.1",
     "winston": "^3.14.2"
   },
