--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@sentry/profiling-node": "^8.28.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^5.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "next": "^14.2.8",
@@ -33,6 +33,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/morgan": "^1.9.9",
     "@types/uuid": "^10.0.0",
     "newman": "^6.0.0",
     "nodemon": "^3.0.1",
