--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^5.0.0",
+    "express-oauth2-jwt-bearer": "^1.6.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "next": "^14.2.8",
+    "request": "^2.88.2",
     "uuid": "^9.0.1",
     "winston": "^3.14.2"
   },
@@ -34,6 +36,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
+    "@types/request": "^2.48.12",
     "@types/uuid": "^10.0.0",
     "newman": "^6.0.0",
     "nodemon": "^3.0.1",
