--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@prisma/client": "^5.19.1",
     "@sentry/nextjs": "^8.29.0",
     "@sentry/node": "^7.119.0",
-    "@sentry/profiling-node": "^8.28.0",
+    "@sentry/profiling-node": "^8.30.0",
+    "@sentry/tracing": "^7.114.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^5.0.0",
