--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "dev": "nodemon index.js",
+    "seed": "node ./prisma/seed.js",
     "test-positive": "newman run \"./postman/collections/Bookings API.json\" -e \"./postman/environments/Local.postman_environment.json\"",
     "test-negative": "newman run \"./postman/collections/Bookings API Negative.json\" -e \"./postman/environments/Local.postman_environment.json\"",
     "test": "npm run test-positive && npm run test-negative"
@@ -16,32 +17,23 @@
   "author": "Tiga85",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.19.1",
-    "@sentry/nextjs": "^8.29.0",
+    "@prisma/client": "^5.20.0",
     "@sentry/node": "^7.119.0",
-    "@sentry/profiling-node": "^8.30.0",
-    "@sentry/tracing": "^7.114.0",
-    "bcryptjs": "^2.4.3",
+    "@supabase/supabase-js": "^2.45.4",
     "dotenv": "^16.4.5",
-    "express": "^5.0.0",
+    "express": "^4.21.0",
     "express-oauth2-jwt-bearer": "^1.6.0",
-    "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
-    "next": "^14.2.8",
-    "request": "^2.88.2",
-    "uuid": "^9.0.1",
-    "winston": "^3.14.2"
+    "jsonwebtoken": "^9.0.1",
+    "uuid": "^9.0.0",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/morgan": "^1.9.9",
-    "@types/request": "^2.48.12",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/uuid": "^10.0.0",
-    "newman": "^6.0.0",
+    "newman": "^6.2.0",
     "nodemon": "^3.0.1",
-    "prisma": "^5.19.1"
+    "prisma": "^5.20.0"
   },
   "engines": {
     "node": ">=18 <19"
